feat: Calculating coef_ and intercept_ for lsqr solver

--- a/Discriminant_analysis.ipynb
+++ b/Discriminant_analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,8 +18,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$\\large \\log P(y=k|x) = \\omega_{k}^{t} x + \\omega_{k_{0}} + constant$  \n",
+    "where $\\omega_{k} = \\Sigma^{-1} \\mu_{k}$, $\\omega_{k_{0}} = -\\frac{1}{2} \\mu_{k}^t \\Sigma^{-1} \\mu_{k} + \\log{P(y=k)}$"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,31 +47,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "LinearDiscriminantAnalysis(store_covariance=True)"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "lda = LinearDiscriminantAnalysis(store_covariance=True)\n",
-    "lda.fit(X_train, y_train)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
+    "lda = LinearDiscriminantAnalysis(solver='lsqr', store_covariance=True)\n",
+    "lda.fit(X_train, y_train)\n",
+    "\n",
     "pred = lda.predict(X_test)\n",
     "pred_proba = lda.predict_proba(X_test)"
    ]
@@ -73,143 +63,6 @@
    "metadata": {},
    "source": [
     "`priors_`"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 25,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 25,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "y_train_counts = np.unique(y_train, return_counts=True)[1]\n",
-    "np.alltrue(lda.priors_ == y_train_counts/y_train_counts.sum())"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "`covariance_`"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 124,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 124,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "covariance = (lda.priors_[0]*np.cov(X_train[y_train==0], rowvar=False, ddof=0) + lda.priors_[1]*np.cov(X_train[y_train==1], rowvar=False, ddof=0))\n",
-    "np.alltrue(lda.covariance_==covariance)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "`means_`"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 131,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 131,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "means = np.array([X_train[y_train==0].mean(axis=0),X_train[y_train==1].mean(axis=0)])\n",
-    "np.alltrue(lda.means_== means)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "`xbar_`"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 140,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "True\n",
-      "True\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(np.allclose(lda.xbar_, X_train.mean(axis=0)))\n",
-    "print(np.alltrue(lda.xbar_ == np.dot(lda.priors_, lda.means_)))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "`predict_proba`"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "np.alltrue(pred_proba[:, 1] == expit(lda.decision_function(X_test)) )"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "`decision_function`"
    ]
   },
   {
@@ -229,6 +82,198 @@
     }
    ],
    "source": [
+    "y_train_counts = np.unique(y_train, return_counts=True)[1]\n",
+    "np.alltrue(lda.priors_ == y_train_counts/y_train_counts.sum())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "`covariance_`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# by numpy cov\n",
+    "covariance = (lda.priors_[0]*np.cov(X_train[y_train==0], rowvar=False, ddof=0) + lda.priors_[1]*np.cov(X_train[y_train==1], rowvar=False, ddof=0))\n",
+    "np.alltrue(lda.covariance_==covariance)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 61,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# by sklearn empirical_covariance\n",
+    "covariance = (lda.priors_[0]*empirical_covariance(X_train[y_train==0]) + lda.priors_[1]*empirical_covariance(X_train[y_train==1], ))\n",
+    "np.alltrue(lda.covariance_==covariance)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "c = np.linalg.lstsq(lda.covariance_, lda.means_.T, rcond=None)[0].T"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ True,  True,  True,  True,  True,  True,  True,  True,  True,\n",
+       "         True,  True,  True,  True,  True,  True,  True,  True,  True,\n",
+       "         True,  True,  True,  True,  True,  True,  True,  True,  True,\n",
+       "         True,  True,  True]])"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.isclose(np.array( c[1, :] - c[0, :], ndmin=2, dtype=X_train.dtype), lda.coef_)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "`means_`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "shape of means_: (2, 30)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "print('shape of means_:', lda.means_.shape)\n",
+    "means = np.array([X_train[y_train==0].mean(axis=0), X_train[y_train==1].mean(axis=0)])\n",
+    "np.alltrue(lda.means_== means)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "`xbar_` only in svd solver"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print('shape of xbar_:', lda.xbar_.shape)\n",
+    "print(np.allclose(lda.xbar_, X_train.mean(axis=0)))\n",
+    "print(np.alltrue(lda.xbar_ == np.dot(lda.priors_, lda.means_)))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "`predict_proba`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.alltrue(pred_proba[:, 1] == expit(lda.decision_function(X_test)) )"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "`decision_function`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
     "np.alltrue(lda.decision_function(X_test) == ((X_test).dot(lda.coef_.T) + lda.intercept_).flatten())"
    ]
   },
@@ -236,8 +281,28 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "`coef_`\n",
-    "1. when `solver='svd'`"
+    "# Solver"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## svd"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "`coef_`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "[reference for implementing svd solver](https://github.com/scikit-learn/scikit-learn/blob/0d378913be6d7e485b792ea36e9268be31ed52d0/sklearn/discriminant_analysis.py#L470)"
    ]
   },
   {
@@ -261,6 +326,7 @@
     "std[std == 0] = 1.0\n",
     "fac = 1.0 / (n_samples - n_classes)\n",
     "\n",
+    "# 1. SVD of centered input matrix X(X_train)\n",
     "X_train_ = np.sqrt(fac) * (Xc / std)\n",
     "U, S, Vt = np.linalg.svd(X_train_, full_matrices=False)\n",
     "\n",
@@ -268,6 +334,7 @@
     "scalings = (Vt[:rank] / std).T / S[:rank]\n",
     "\n",
     "\n",
+    "# 2. SVD of the class-wise mean vectors\n",
     "X_train_0 = np.dot(\n",
     "    (\n",
     "        (np.sqrt((n_samples * lda.priors_) * fac))\n",
@@ -314,8 +381,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "`intercept_`\n",
-    "1. when `solver = 'svd'`"
+    "`intercept_`"
    ]
   },
   {
@@ -340,6 +406,106 @@
       ]
      },
      "execution_count": 56,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.allclose(lda.intercept_ , intercept_)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 'lsqr'"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "`coef_`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "StandardScaler()"
+      ]
+     },
+     "execution_count": 62,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sc = StandardScaler()\n",
+    "sc.fit(X_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 100,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "coef_ = np.linalg.lstsq(lda.covariance_, lda.means_.T, rcond=None)[0].T\n",
+    "intercept_ = -0.5 * np.diag(np.dot(lda.means_, coef_.T)) + np.log(\n",
+    "            lda.priors_\n",
+    "        )\n",
+    "\n",
+    "if n_classes==2:\n",
+    "    coef_ = np.array( coef_[1, :] - coef_[0, :], ndmin=2, dtype=X_train.dtype)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 101,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 101,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.allclose(lda.coef_ , coef_)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 102,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if n_classes==2:\n",
+    "    intercept_ =  np.array(  intercept_[1] - intercept_[0], ndmin=1, dtype=X_train.dtype )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 103,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 103,
      "metadata": {},
      "output_type": "execute_result"
     }
