--- a/Discriminant_analysis.ipynb
+++ b/Discriminant_analysis.ipynb
@@ -21,7 +21,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "$\\large \\log P(y=k|x) = \\omega_{k}^{t} x + \\omega_{k_{0}} + constant$  \n",
+    "$\\large \\log P(y=k|x) = \\omega_{k}^{t} x + \\omega_{k_{0}} + constant$  "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "where $\\omega_{k} = \\Sigma^{-1} \\mu_{k}$, $\\omega_{k_{0}} = -\\frac{1}{2} \\mu_{k}^t \\Sigma^{-1} \\mu_{k} + \\log{P(y=k)}$"
    ]
   },
