docs: Correct formulae

--- a/Discriminant_analysis.ipynb
+++ b/Discriminant_analysis.ipynb
@@ -21,7 +21,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "$\\large \\log P(y=k|x) = \\omega_{k}^{t} x + \\omega_{k_{0}} + constant$  "
+    "$\\large \\log P(y=k|x) = \\omega _{k}^{t} x + {\\omega }_{k_{0}} + constant$  "
    ]
   },
   {
