feat: Add calculating residual deviance

--- a/Logistic_regression.ipynb
+++ b/Logistic_regression.ipynb
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 177,
+   "execution_count": 366,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -133,7 +133,8 @@
     "            if self.penalty=='l2':\n",
     "                self.log_likelihood = -self._llf_l2(coef, X_, y)\n",
     "            else:\n",
-    "                self.log_likelihood = -self._llf_none(coef, X_, y)\n",
+    "                self.log_likelihood, log_likelihood_array = self._llf_none(coef, X_, y, return_array=True)\n",
+    "                self.log_likelihood = -self.log_likelihood\n",
     "        else:\n",
     "            raise ValueError(\"This solver is not supported.\") from None\n",
     "        \n",
@@ -144,8 +145,12 @@
     "        \n",
     "        mu = self._sigmoid(self.coef_, X_)\n",
     "        if self.solver=='irls':\n",
-    "            self.deviance = -2*self.log_likelihood #-2*( ((X_.dot(self.coef_)).T).dot(y) + np.log(1 - mu).sum() )\n",
-    "#             self.residual_deviance = np.sqrt( -2*( (X_.dot(self.coef_))*(y) + np.log(1 - mu) ) )* np.sign(y - mu)\n",
+    "            self.null = np.tile(b0_init, self.n_samples)\n",
+    "            self.null_deviance = -2 * np.log(np.array([1 - y.mean() if i ==0 else y.mean() for i in y.values])).sum()\n",
+    "            self.deviance = -2 * self.log_likelihood # -2*( ((X_.dot(self.coef_)).T).dot(y) + np.log(1 - mu).sum() )\n",
+    "            if self.penalty =='none': \n",
+    "                self.residual_deviance = np.sqrt(-2*log_likelihood_array) * np.vectorize(lambda x: -1 if x==0 else 1)(y.values)\n",
+    "#                 self.residual_deviance = np.sqrt( -2*( (X_.dot(self.coef_))*(y) + np.log(1 - mu) ) )* np.sign(y - mu)\n",
     "        self.residual_pearson = (y - mu)/np.sqrt(mu*(1-mu))\n",
     "        self.pearson_chi2 = np.square(self.residual_pearson).sum()\n",
     "        \n",
@@ -172,12 +177,6 @@
     "        return np.array(pred==y, dtype=int).sum() / y.size\n",
     "    \n",
     "    def summary(self, feature_names = None, round_decimals=3, alpha=0.05):\n",
-    "        '''res_min = self.residual.min()\n",
-    "        res_max = self.residual.max()\n",
-    "        res_1q = np.quantile(self.residual, .25)\n",
-    "        res_med = np.median(self.residual)\n",
-    "        res_3q = np.quantile(self.residual, .75)\n",
-    "        res = pd.DataFrame(np.array([res_min, res_1q, res_med, res_3q, res_max]).reshape(1,-1), columns = ['Residuals: Min', '1Q', 'Median', '3Q', 'Max'])'''\n",
     "        \n",
     "        ci_lower = np.round(self.coef_ - self.std_error * norm.ppf(1-alpha/2, ), round_decimals)\n",
     "        ci_upper = np.round(self.coef_ + self.std_error * norm.ppf(1-alpha/2, ), round_decimals)\n",
@@ -191,11 +190,13 @@
     "                               ['coef.', 'std. error', 'z_value', 'Pr(>|z|)', '{}% LWR'.format(int(100*(1-alpha))), '{}% UPR'.format(int(100*(1-alpha)))])\n",
     "        \n",
     "        if self.solver == 'irls':\n",
-    "            result = 'No. Observations: {}\\nDF Residuals: {}\\nLog-likelihood: {}\\nDeviance: {}\\nPearson chi2: {}'.format(self.n_samples, self.n_features, self.log_likelihood, self.deviance, self.pearson_chi2)\n",
+    "            result_input = [self.n_samples, self.n_samples-self.n_features-1, self.n_features, self.log_likelihood, self.deviance, self.pearson_chi2]\n",
+    "            result = 'No. Observations: {}\\nDF Residuals: {}\\nDF Model: {}\\nLog-likelihood: {}\\nDeviance: {}\\nPearson chi2: {}'.format(*result_input)\n",
     "            sol = 'Solver: {}\\nNo. Iterations: {}'.format(self.solver.upper(), self.n_iter)\n",
     "            print(sol, result, coef, sep='\\n'+'='*70+'\\n')\n",
     "        else:\n",
-    "            result = 'No. Observations: {}\\nDF Residuals: {}\\nLog-likelihood: {}\\nPearson chi2: {}'.format(self.n_samples, self.n_features, self.log_likelihood, self.pearson_chi2)\n",
+    "            result_input = [self.n_samples, self.n_samples-self.n_features-1, self.n_features, self.log_likelihood, self.pearson_chi2]\n",
+    "            result = 'No. Observations: {}\\nDF Residuals: {}\\nDF Model: {}\\nLog-likelihood: {}\\nPearson chi2: {}'.format(*result_input)\n",
     "            print(result, coef, sep='\\n'+'='*70+'\\n')"
    ]
   },
@@ -316,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 315,
+   "execution_count": 367,
    "metadata": {},
    "outputs": [
     {
@@ -327,7 +328,8 @@
       "No. Iterations: 10\n",
       "======================================================================\n",
       "No. Observations: 455\n",
-      "DF Residuals: 17\n",
+      "DF Residuals: 437\n",
+      "DF Model: 17\n",
       "Log-likelihood: -36.623809370176296\n",
       "Deviance: 73.24761874035259\n",
       "Pearson chi2: 431.80556285032856\n",
@@ -363,12 +365,52 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 370,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 370,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.allclose(result.resid_deviance, lr.residual_deviance)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 319,
    "metadata": {},
    "outputs": [],
    "source": [
     "y_train_ = np.vectorize(lambda x: -1 if x==0 else 1)(y_train.values)\n",
     "residual_deviance = -2 * np.log(1/(1+np.exp(-y_train_* (X_train[:,:n_features].dot(lr.coef_[1:]) + lr.coef_[0] ) ) ))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 334,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "399.5668758705552"
+      ]
+     },
+     "execution_count": 334,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "chi2.ppf(.1, result.df_resid)"
    ]
   },
   {
