docs: Fix the docs

--- a/Initializer.ipynb
+++ b/Initializer.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -128,18 +128,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def tnorm_var(a,b,sig, mu=0):\n",
-    "    alpha = (a-mu)/sig\n",
-    "    beta = (b-mu)/sig\n",
-    "    z = norm.cdf(beta, mu, sig) - norm.cdf(alpha, mu, sig)\n",
-    "    pdf_a = norm.pdf(alpha, mu, sig)\n",
-    "    pdf_b = norm.pdf(beta, mu, sig)\n",
-    "    var = np.square(sig)*(1+(alpha*pdf_a - beta*pdf_b)/z - np.square((pdf_a - pdf_b)/z))\n",
-    "    return var"
+    "# def tnorm_var(a,b,sig, mu=0):\n",
+    "#     alpha = (a-mu)/sig\n",
+    "#     beta = (b-mu)/sig\n",
+    "#     z = norm.cdf(beta, mu, sig) - norm.cdf(alpha, mu, sig)\n",
+    "#     pdf_a = norm.pdf(alpha, mu, sig)\n",
+    "#     pdf_b = norm.pdf(beta, mu, sig)\n",
+    "#     var = np.square(sig)*(1+(alpha*pdf_a - beta*pdf_b)/z - np.square((pdf_a - pdf_b)/z))\n",
+    "#     return var"
    ]
   },
   {
@@ -153,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -173,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -200,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -211,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -220,10 +220,10 @@
      "text": [
       "* calculated by scipy library\n",
       "shape: (50, 128)\n",
-      "mean: 0.001001029051936007\n",
-      "std: 0.10626120796316196\n",
-      "min: -0.24061649287298736\n",
-      "max: 0.24066782632015507\n"
+      "mean: -0.0025161090367549067\n",
+      "std: 0.10600454323633049\n",
+      "min: -0.240841800682409\n",
+      "max: 0.2406200082427943\n"
      ]
     }
    ],
@@ -238,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -247,10 +247,10 @@
      "text": [
       "* calculated by keras backend\n",
       "shape: (50, 128)\n",
-      "mean: -0.0029025741\n",
-      "std: 0.10517134\n",
-      "min: -0.24041878\n",
-      "max: 0.24067865\n"
+      "mean: -0.0015064634\n",
+      "std: 0.10694163\n",
+      "min: -0.240501\n",
+      "max: 0.24021313\n"
      ]
     }
    ],
@@ -274,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -282,7 +282,7 @@
      "output_type": "stream",
      "text": [
       "two input samples are from populations with equal variances: True\n",
-      "two input samples have identical average values: False\n"
+      "two input samples have identical average values: True\n"
      ]
     }
    ],
@@ -300,7 +300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
