docs: Change chapter names

--- a/neural_network/LSTM.ipynb
+++ b/neural_network/LSTM.ipynb
@@ -145,7 +145,7 @@
     "    ht = tanh(ct) * ot\n",
     "    \n",
     "    print('t={}'.format(str(t).zfill(2)), end=', ')\n",
-    "    print('validation - calculating hidden state:', np.allclose(ht, hidden_state[:,t,:], rtol=1e-5))\n",
+    "    print('validation - calculating hidden state:', np.allclose(ht, hidden_state[:,t,:], ))\n",
     "#     if t==max_len-1:\n",
     "#         print('validation - calculating cell state:', np.allclose(ct, last_cell, ))"
    ]
