--- a/neural_network/LSTM.ipynb
+++ b/neural_network/LSTM.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 204,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,12 +44,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Example 1"
+    "# Example 1: with embedding layer"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 205,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 206,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 199,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 209,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -154,7 +154,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Example 2"
+    "# Example 2: with normalizing dataset"
    ]
   },
   {
