--- a/neural_network/CNN.ipynb
+++ b/neural_network/CNN.ipynb
@@ -10,7 +10,7 @@
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "import copy\n",
-    "from time\n",
+    "import time\n",
     "from tqdm import tqdm\n",
     "from scipy.stats import truncnorm, norm, levene, ttest_ind\n",
     "\n",
