fix: Fix the code that applies reset gate to matrix multiplication

--- a/neural_network/GRU.ipynb
+++ b/neural_network/GRU.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 166,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,7 +67,10 @@
     "model.add(Embedding(vocab_size, embedding_dim, input_length = max_len, ))\n",
     "X_emb = model(X)\n",
     "\n",
-    "model.add(GRU(hidden_states,  return_sequences=True, return_state=False, input_shape= (max_len, embedding_dim), reset_after=True))\n",
+    "model.add(\n",
+    "            GRU(hidden_states,  return_sequences=True, return_state=False, input_shape= (max_len, embedding_dim), reset_after=True, use_bias=True,\n",
+    "               bias_initializer='glorot_normal')\n",
+    "         )\n",
     "hidden_state = model(X)\n",
     "gru = model.layers[1]"
    ]
@@ -81,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 161,
+   "execution_count": 167,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": 132,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -111,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": 168,
    "metadata": {},
    "outputs": [
     {
@@ -143,24 +146,19 @@
    ],
    "source": [
     "for t in range(max_len):\n",
-    "    if t>0: htt = hidden_state[:,t-1,:]\n",
+    "    if t>0: htt = ht # hidden_state[:,t-1,:]\n",
     "    else: htt = tf.zeros((n_samples, hidden_states))\n",
     "    X_tf_ = X_emb[:,t,:]\n",
     "\n",
-    "    zt = sigmoid(tf.matmul(X_tf_, ki)+ bi[0] + tf.matmul(htt, ri) + bi[1])\n",
-    "    rt = sigmoid(tf.matmul(X_tf_, kf)+ bf[0] + tf.matmul(htt, rf) + bf[1])\n",
+    "    zt = gru.recurrent_activation(K.bias_add(tf.matmul(X_tf_, ki), bi[0]) + K.bias_add(tf.matmul(htt, ri), bi[1]))\n",
+    "    rt = gru.recurrent_activation(K.bias_add(tf.matmul(X_tf_, kf), bf[0]) + K.bias_add(tf.matmul(htt, rf), bf[1]))\n",
     "\n",
-    "#     if t==0: ctt = tf.zeros(ft.shape)\n",
-    "#     else: ctt = copy.deepcopy(ct)\n",
     "\n",
-    "    gt = tanh(tf.matmul(X_tf_, kc) + bc[0] + rt*(tf.matmul(htt, rc)) + bc[1])\n",
-    "#     ot = sigmoid(tf.matmul(X_tf_, ko) + tf.matmul(htt, ro) + bo)\n",
+    "    gt = gru.activation(K.bias_add(tf.matmul(X_tf_, kc), bc[0]) + rt*(K.bias_add(tf.matmul(htt, rc), bc[1])) )\n",
     "    ht = (1-zt)*gt + zt*htt\n",
     "    \n",
     "    print('t={}'.format(str(t).zfill(2)), end=', ')\n",
-    "    print('validation - calculating hidden state:', np.allclose(ht, hidden_state[:,t,:], ), abs(ht- hidden_state[:,t,:]).numpy().mean())\n",
-    "#     if t==max_len-1:\n",
-    "#         print('validation - calculating cell state:', np.allclose(ct, last_cell, ))"
+    "    print('validation - calculating hidden state:', np.allclose(hidden_state[:,t,:], ht, atol=5e-7), abs(ht- hidden_state[:,t,:]).numpy().max() )"
    ]
   },
   {
@@ -172,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 169,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -180,15 +178,16 @@
     "X = rng.normal(size=(n_samples, max_len, embedding_dim))\n",
     "X_tf = tf.linalg.normalize(X, axis=2, )[0]\n",
     "# X = np.array([Normalizer().fit_transform(X[s]) for s in range(n_samples) ])\n",
-    "X_tf = tf.constant(X, dtype=tf.float32)\n",
+    "X_tf = tf.cast(X_tf, dtype=tf.float32)\n",
     "\n",
-    "gru = GRU(hidden_states,  return_sequences=True, return_state=True, input_shape= (max_len, embedding_dim), reset_after=True)\n",
-    "hidden_state, last_state, = gru(X)"
+    "gru = GRU(hidden_states,  return_sequences=True, return_state=True, input_shape= (max_len, embedding_dim), reset_after=True,\n",
+    "         bias_initializer='glorot_normal')\n",
+    "hidden_state, last_state, = gru(X_tf)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 170,
    "metadata": {},
    "outputs": [
     {
@@ -197,7 +196,7 @@
        "TensorShape([5533, 20, 128])"
       ]
      },
-     "execution_count": 75,
+     "execution_count": 170,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -208,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 171,
    "metadata": {},
    "outputs": [
     {
@@ -217,7 +216,7 @@
        "True"
       ]
      },
-     "execution_count": 76,
+     "execution_count": 171,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -251,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 172,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -265,14 +264,14 @@
     "rc = gru.cell.recurrent_kernel[:, 2*hidden_states:]\n",
     "\n",
     "\n",
-    "bi = gru.cell.bias[0,:hidden_states]\n",
-    "bf = gru.cell.bias[0,hidden_states:2*hidden_states]\n",
-    "bc = gru.cell.bias[0,2*hidden_states:]"
+    "bi = gru.cell.bias[:, :hidden_states]\n",
+    "bf = gru.cell.bias[:, hidden_states:2*hidden_states]\n",
+    "bc = gru.cell.bias[:, 2*hidden_states:]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 180,
    "metadata": {},
    "outputs": [
     {
@@ -308,20 +307,15 @@
     "    else: htt = tf.zeros((n_samples, hidden_states))\n",
     "    X_tf_ = X_tf[:,t,:]\n",
     "\n",
-    "    zt = sigmoid(tf.matmul(X_tf_, ki) + tf.matmul(htt, ri) + bi)\n",
-    "    rt = sigmoid(tf.matmul(X_tf_, kf) + tf.matmul(htt, rf) + bf)\n",
+    "    zt = gru.recurrent_activation(K.bias_add(tf.matmul(X_tf_, ki), bi[0]) + K.bias_add(tf.matmul(htt, ri), bi[1]))\n",
+    "    rt = gru.recurrent_activation(K.bias_add(tf.matmul(X_tf_, kf), bf[0]) + K.bias_add(tf.matmul(htt, rf), bf[1]))\n",
     "\n",
-    "#     if t==0: ctt = tf.zeros(ft.shape)\n",
-    "#     else: ctt = copy.deepcopy(ct)\n",
     "\n",
-    "    gt = tanh(tf.matmul(X_tf_, kc) + rt*(tf.matmul(htt, rc)) + bc)\n",
-    "#     ot = sigmoid(tf.matmul(X_tf_, ko) + tf.matmul(htt, ro) + bo)\n",
+    "    gt = gru.activation(K.bias_add(tf.matmul(X_tf_, kc), bc[0]) + rt*(K.bias_add(tf.matmul(htt, rc), bc[1])) )\n",
     "    ht = (1-zt)*gt + zt*htt\n",
     "    \n",
     "    print('t={}'.format(str(t).zfill(2)), end=', ')\n",
-    "    print('validation - calculating hidden state:', np.allclose(ht, hidden_state[:,t,:], ), abs(ht- hidden_state[:,t,:]).numpy().mean())\n",
-    "#     if t==max_len-1:\n",
-    "#         print('validation - calculating cell state:', np.allclose(ct, last_cell, ))"
+    "    print('validation - calculating hidden state:', np.allclose(hidden_state[:,t,:], ht, atol=5e-8), abs(ht- hidden_state[:,t,:]).numpy().max())\n"
    ]
   },
   {
