feat: Add code used when reset_after equals to False

--- a/neural_network/GRU.ipynb
+++ b/neural_network/GRU.ipynb
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 166,
+   "execution_count": 276,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,7 +68,7 @@
     "X_emb = model(X)\n",
     "\n",
     "model.add(\n",
-    "            GRU(hidden_states,  return_sequences=True, return_state=False, input_shape= (max_len, embedding_dim), reset_after=True, use_bias=True,\n",
+    "            GRU(hidden_states,  return_sequences=True, return_state=False, input_shape= (max_len, embedding_dim), reset_after=False, use_bias=True,\n",
     "               bias_initializer='glorot_normal')\n",
     "         )\n",
     "hidden_state = model(X)\n",
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 167,
+   "execution_count": 277,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,15 +97,19 @@
     "rf = gru.cell.recurrent_kernel[:, hidden_states:2*hidden_states]\n",
     "rc = gru.cell.recurrent_kernel[:, 2*hidden_states:]\n",
     "\n",
-    "\n",
-    "bi = gru.cell.bias[:, :hidden_states]\n",
-    "bf = gru.cell.bias[:, hidden_states:2*hidden_states]\n",
-    "bc = gru.cell.bias[:, 2*hidden_states:]"
+    "if gru.reset_after:\n",
+    "    bi = gru.cell.bias[:, :hidden_states]\n",
+    "    bf = gru.cell.bias[:, hidden_states:2*hidden_states]\n",
+    "    bc = gru.cell.bias[:, 2*hidden_states:]\n",
+    "else:\n",
+    "    bi = gru.cell.bias[:hidden_states]\n",
+    "    bf = gru.cell.bias[hidden_states:2*hidden_states]\n",
+    "    bc = gru.cell.bias[2*hidden_states:]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 278,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -114,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 168,
+   "execution_count": 279,
    "metadata": {},
    "outputs": [
     {
@@ -149,16 +153,21 @@
     "    if t>0: htt = ht # hidden_state[:,t-1,:]\n",
     "    else: htt = tf.zeros((n_samples, hidden_states))\n",
     "    X_tf_ = X_emb[:,t,:]\n",
+    "    \n",
+    "    if gru.reset_after:\n",
+    "        zt = gru.recurrent_activation(K.bias_add(tf.matmul(X_tf_, ki), bi[0]) + K.bias_add(tf.matmul(htt, ri), bi[1]))\n",
+    "        rt = gru.recurrent_activation(K.bias_add(tf.matmul(X_tf_, kf), bf[0]) + K.bias_add(tf.matmul(htt, rf), bf[1]))\n",
     "\n",
-    "    zt = gru.recurrent_activation(K.bias_add(tf.matmul(X_tf_, ki), bi[0]) + K.bias_add(tf.matmul(htt, ri), bi[1]))\n",
-    "    rt = gru.recurrent_activation(K.bias_add(tf.matmul(X_tf_, kf), bf[0]) + K.bias_add(tf.matmul(htt, rf), bf[1]))\n",
+    "        gt = gru.activation(K.bias_add(tf.matmul(X_tf_, kc), bc[0]) + rt*(K.bias_add(tf.matmul(htt, rc), bc[1])) )\n",
+    "    else:\n",
+    "        zt = gru.recurrent_activation(K.bias_add(tf.matmul(X_tf_, ki), bi) + (tf.matmul(htt, ri)) )\n",
+    "        rt = gru.recurrent_activation(K.bias_add(tf.matmul(X_tf_, kf), bf) + (tf.matmul(htt, rf)) )\n",
     "\n",
-    "\n",
-    "    gt = gru.activation(K.bias_add(tf.matmul(X_tf_, kc), bc[0]) + rt*(K.bias_add(tf.matmul(htt, rc), bc[1])) )\n",
+    "        gt = gru.activation(K.bias_add(tf.matmul(X_tf_, kc), bc) + (tf.matmul(rt*htt, rc)) )\n",
     "    ht = (1-zt)*gt + zt*htt\n",
     "    \n",
     "    print('t={}'.format(str(t).zfill(2)), end=', ')\n",
-    "    print('validation - calculating hidden state:', np.allclose(hidden_state[:,t,:], ht, atol=5e-7), abs(ht- hidden_state[:,t,:]).numpy().max() )"
+    "    print('validation - calculating hidden state:', np.alltrue(hidden_state[:,t,:]== ht, ), abs(ht- hidden_state[:,t,:]).numpy().max() )"
    ]
   },
   {
@@ -170,24 +179,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 169,
+   "execution_count": 270,
    "metadata": {},
    "outputs": [],
    "source": [
     "rng = np.random.default_rng(42)\n",
     "X = rng.normal(size=(n_samples, max_len, embedding_dim))\n",
-    "X_tf = tf.linalg.normalize(X, axis=2, )[0]\n",
+    "# X_tf = tf.linalg.normalize(X, axis=2, )[0]\n",
     "# X = np.array([Normalizer().fit_transform(X[s]) for s in range(n_samples) ])\n",
-    "X_tf = tf.cast(X_tf, dtype=tf.float32)\n",
+    "X_tf = tf.cast(X, dtype=tf.float32)\n",
     "\n",
-    "gru = GRU(hidden_states,  return_sequences=True, return_state=True, input_shape= (max_len, embedding_dim), reset_after=True,\n",
-    "         bias_initializer='glorot_normal')\n",
-    "hidden_state, last_state, = gru(X_tf)"
+    "gru = GRU(hidden_states,  return_sequences=True, return_state=True, input_shape= (max_len, embedding_dim), reset_after=False,\n",
+    "         bias_initializer='uniform')\n",
+    "hidden_state, last_state, = gru(X)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 170,
+   "execution_count": 271,
    "metadata": {},
    "outputs": [
     {
@@ -196,7 +205,7 @@
        "TensorShape([5533, 20, 128])"
       ]
      },
-     "execution_count": 170,
+     "execution_count": 271,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -207,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 171,
+   "execution_count": 272,
    "metadata": {},
    "outputs": [
     {
@@ -216,7 +225,7 @@
        "True"
       ]
      },
-     "execution_count": 171,
+     "execution_count": 272,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -227,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 273,
    "metadata": {},
    "outputs": [
     {
@@ -250,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 172,
+   "execution_count": 274,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -263,15 +272,19 @@
     "rf = gru.cell.recurrent_kernel[:, hidden_states:2*hidden_states]\n",
     "rc = gru.cell.recurrent_kernel[:, 2*hidden_states:]\n",
     "\n",
-    "\n",
-    "bi = gru.cell.bias[:, :hidden_states]\n",
-    "bf = gru.cell.bias[:, hidden_states:2*hidden_states]\n",
-    "bc = gru.cell.bias[:, 2*hidden_states:]"
+    "if gru.reset_after:\n",
+    "    bi = gru.cell.bias[:, :hidden_states]\n",
+    "    bf = gru.cell.bias[:, hidden_states:2*hidden_states]\n",
+    "    bc = gru.cell.bias[:, 2*hidden_states:]\n",
+    "else:\n",
+    "    bi = gru.cell.bias[:hidden_states]\n",
+    "    bf = gru.cell.bias[hidden_states:2*hidden_states]\n",
+    "    bc = gru.cell.bias[2*hidden_states:]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 180,
+   "execution_count": 275,
    "metadata": {},
    "outputs": [
     {
@@ -303,19 +316,24 @@
    ],
    "source": [
     "for t in range(max_len):\n",
-    "    if t>0: htt = hidden_state[:,t-1,:]\n",
+    "    if t>0: htt = ht # hidden_state[:,t-1,:]\n",
     "    else: htt = tf.zeros((n_samples, hidden_states))\n",
     "    X_tf_ = X_tf[:,t,:]\n",
     "\n",
-    "    zt = gru.recurrent_activation(K.bias_add(tf.matmul(X_tf_, ki), bi[0]) + K.bias_add(tf.matmul(htt, ri), bi[1]))\n",
-    "    rt = gru.recurrent_activation(K.bias_add(tf.matmul(X_tf_, kf), bf[0]) + K.bias_add(tf.matmul(htt, rf), bf[1]))\n",
+    "    if gru.reset_after:\n",
+    "        zt = gru.recurrent_activation(K.bias_add(tf.matmul(X_tf_, ki), bi[0]) + K.bias_add(tf.matmul(htt, ri), bi[1]))\n",
+    "        rt = gru.recurrent_activation(K.bias_add(tf.matmul(X_tf_, kf), bf[0]) + K.bias_add(tf.matmul(htt, rf), bf[1]))\n",
     "\n",
+    "        gt = gru.activation(K.bias_add(tf.matmul(X_tf_, kc), bc[0]) + rt*(K.bias_add(tf.matmul(htt, rc), bc[1])) )\n",
+    "    else:\n",
+    "        zt = gru.recurrent_activation(K.bias_add(tf.matmul(X_tf_, ki), bi) + (tf.matmul(htt, ri)) )\n",
+    "        rt = gru.recurrent_activation(K.bias_add(tf.matmul(X_tf_, kf), bf) + (tf.matmul(htt, rf)) )\n",
     "\n",
-    "    gt = gru.activation(K.bias_add(tf.matmul(X_tf_, kc), bc[0]) + rt*(K.bias_add(tf.matmul(htt, rc), bc[1])) )\n",
+    "        gt = gru.activation(K.bias_add(tf.matmul(X_tf_, kc), bc) + (tf.matmul(rt*htt, rc)) )\n",
     "    ht = (1-zt)*gt + zt*htt\n",
     "    \n",
     "    print('t={}'.format(str(t).zfill(2)), end=', ')\n",
-    "    print('validation - calculating hidden state:', np.allclose(hidden_state[:,t,:], ht, atol=5e-8), abs(ht- hidden_state[:,t,:]).numpy().max())\n"
+    "    print('validation - calculating hidden state:', np.alltrue(hidden_state[:,t,:] == ht, ), abs(ht- hidden_state[:,t,:]).numpy().max())\n"
    ]
   },
   {
